# travel_planner

./: .gitignore  LICENSE  README.md  REQUIREMENTS.md  pyproject.toml
src/travel_planner/: __main__.py  gradio_app.py  utils.py
src/travel_planner/agents/: __init__.py
src/travel_planner/agents/gastro_agent/: __init__.py  agent.py  instructions.md
src/travel_planner/agents/general_agent/: __init__.py  agent.py  instructions.md
src/travel_planner/agents/itinerary_planner/: __init__.py  agent.py  instructions.md
src/travel_planner/agents/navigation_planner/: __init__.py  agent.py  instructions.md
src/travel_planner/agents/place_researcher/: __init__.py  agent.py  instructions.md
src/travel_planner/agents/weather_agent/: __init__.py  agent.py
