[project]
name = "travel-planner"
version = "0.1.0"
description = "Agentic travel planner"
authors = [
    {name = "Kai Hodžić", email = "hodzic.e.k@outlook.com"},
]
dependencies = ["google-adk>=1.18.0", "pydantic>=2.12.4", "aiohttp>=3.13.2", "gradio>=6.2.0"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
run_app = {call = "travel_planner.gradio_app:main"}

[dependency-groups]
dev = [
    "notebook>=7.4.7",
    "ipython>=9.7.0",
    "ipykernel>=7.1.0",
    "ruff>=0.14.5",
]
